Mise à jour projet

--- a/pages/home.html
+++ b/pages/home.html
@@ -82,7 +82,7 @@
      </div>
      <div class="col">
         <p class="text-justify">
-             Afin de rendre votre visite agréable, ii vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
+             Afin de rendre votre visite agréable, il vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
         </p>
     </div>
     <div class="text-center pt-4">
