--- a/pages/home.html
+++ b/pages/home.html
@@ -27,7 +27,7 @@
             <div class="row row-cols-2 align-items-center">
                 <div class="col">
                     <p class="text-justify">
-                        Venez admirez notre diversité d'espèces animales s'épanouir au sein de leurs habitats naturels.
+                        Venez admirez notre diversité d'espèces animales s'épanouir au sein de leurs habitats naturels
                     </p>
                 </div>
      <div class="row row-cols-2 row-cols-lg-3">
@@ -37,17 +37,16 @@
                 <p class="titre-image">La flore Brocéliande</p>
             </div>
         </div>
-     </div>
      <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/habitat2.jpg" class="rounded w-100"/>
-                <p class="titre-image">La serre des oiseaux</p>
+                <p class="titre-image">La serre tropical</p>
             </div>
         </div>
      </div>
     <div class="text-center pt-4">
-        <a href="/galerie" class="btn btn-primary">Accéder à la visite</a>
+        <a href="/visit" class="btn btn-primary">Accès à la visite</a>
     </div>
 </section>
 
@@ -76,22 +75,25 @@
         <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/guidevisit.jpg" class="rounded w-100"/>
-                <p class="titre-image">visite guidé</p>
+                <p class="titre-image">visite guidée</p>
             </div>
         </div>
      </div>
      <div class="col">
         <p class="text-justify">
-             Afin de rendre votre visite agréable, il vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
+             Afin de rendre votre visite agréable, et vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
         </p>
     </div>
     <div class="text-center pt-4">
-        <a href="/galerie" class="btn btn-primary">Accès aux services</a>
+        <a href="/service" class="btn btn-primary">Accès aux services</a>
     </div>
 </section>
 
 <section>
     
+    <div class="text-center">
+        <button type="submit" class="btn btn-primary">Envoyer</button>
+    </div>
 </section>
 
 </article>
