--- a/pages/services.html
+++ b/pages/services.html
@@ -1,9 +1,60 @@
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
-        <h1>Services</h1>
+        <h1>Services proposés</h1>
     </div>
 </div>
 
 <div class="container">
-
-</div>
+<section>
+        <article class="bg-black text-white">
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Profitez sur places de nos différents stands de restauration</h2>
+            <div class="row row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify">
+                        Tout au long de votre visite du zoo, il a été mis en places diférents type de collations à votre service.
+Ainsi qu’un restaurant au saveur de notre régions avec 2 services prévu le midi
+                    </p>
+                </div>
+     <div class="row row-cols-2 row-cols-lg-3">
+        <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/food.jpg" class="rounded w-100"/>
+            </div>
+        </div>
+     </div>
+        <article class="bg-black text-white">
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Un parcours prévu en petit train</h2>
+            <div class="row row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify">
+                        Afin d’améliorer votre expérience, il est proposé la possibilité d’effectué une grande partie du zoo en petit train. Pour cela il est prévu 1 départs le matin et 2 l’après-midi. Les horaires sont les suivants (durée de 1h15),</br>
+                        matin : 10h</br>
+                        après-midi : 15 et 16h45
+                    </p>
+                </div>
+     <div class="row row-cols-2 row-cols-lg-3">
+        <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/train.jpg" class="rounded w-100"/>
+            </div>
+        </div>
+     </div>
+             <article class="bg-black text-white">
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Suivez nos guides</h2>
+            <div class="row row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify">
+                        Pour devenir incollable sur notre zoo et leurs habitants, il est proposé aussi la possibilité de réaliser la visite accompagné d’un guide
+                    </p>
+                </div>
+     <div class="row row-cols-2 row-cols-lg-3">
+        <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/guidevisit.jpg" class="rounded w-100"/>
+            </div>
+        </div>
+     </div>
+</section>
