--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,21 +5,25 @@
 </div>
 
 <div class="container">
+<h2 class="text-center text-primary">Vous souhaitez nous contacter</h2>
 <form action="/contact" method="post">
   <ul>
     <li>
-      <label for="name">Nom&nbsp;:</label>
+      <label for="name">Pseudo :&nbsp;:</label>   
       <input type="text" id="name" name="user_name" />
     </li>
     <li>
-      <label for="mail">E-mail&nbsp;:</label>
+      <label for="mail">Email :&nbsp;:</label>
       <input type="email" id="mail" name="user_mail" />
     </li>
     <li>
-      <label for="msg">Message&nbsp;:</label>
+      <label for="msg">Message :&nbsp;:</label>
       <textarea id="msg" name="user_message"></textarea>
     </li>
   </ul>
+  <div class="text-center pt-4">
+    <a href="/home" class="btn btn-primary">Envoi</a>
+  </div>
 </form>
 
 <h2 class="text-center text-primary">Nos informations</h2>
