Modification pages Home+service+contact+connexion

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -4,38 +4,38 @@
     </div>
 </div>
 
-<div class="container">
-<h2 class="text-center text-primary">Vous souhaitez nous contacter</h2>
-<form action="/contact" method="post">
-  <ul>
-    <li>
-      <label for="name">Pseudo :&nbsp;:</label>   
-      <input type="text" id="name" name="user_name" />
-    </li>
-    <li>
-      <label for="mail">Email :&nbsp;:</label>
-      <input type="email" id="mail" name="user_mail" />
-    </li>
-    <li>
-      <label for="msg">Message :&nbsp;:</label>
-      <textarea id="msg" name="user_message"></textarea>
-    </li>
-  </ul>
-  <div class="text-center pt-4">
-    <a href="/home" class="btn btn-primary">Envoi</a>
-  </div>
-</form>
+    <div class="container">
+        <h2 class="text-center text-primary">Vous souhaitez nous contacter</h2>      
+  <form action="/contact" method="post">
+    <ul>
+      <li>
+        <label for="name">Pseudo :&nbsp;</label>   
+        <input type="text" id="name" name="user_name" />
+      </li>
+      <li>
+         <label for="mail">Email :&nbsp;</label>
+         <input type="email" id="mail" name="user_mail" />
+      </li>
+      <li>
+         <label for="msg">Message :&nbsp;</label>
+         <textarea id="msg" name="user_message"></textarea>
+      </li>
+    </ul>
+    <div class="text-center pt-4">
+       <a href="/home" class="btn btn-primary">Envoi</a>
+    </div>
+  </form>
 
-<h2 class="text-center text-primary">Nos informations</h2>
+  <div class="container text-center">
+      <h2 class="text-center text-primary pt-3">Nos informations</h2>
     <p>Nos horaires</p>
     <p>Du Lundi au vendredi</br>
-      09:30-18:00
-    </p>
+       09:30-18:00</br>
     <p>Le Week-End</br>
-    08:30-19:30
+       08:30-19:30
     </p>
     <p>Horaires sujet à modification les vacances et jours fériées</p>
-    <p> mail : contact@zooarcadia.com</br>
-     tél : 02 99 01 01 01
+    <p>mail : contact@zooarcadia.com</br>
+       tél : 02 99 01 01 01
     </p>
-</div>
+  </div>
