--- a/pages/home.html
+++ b/pages/home.html
@@ -9,9 +9,9 @@
         <article>
         <div class="container p-4">
             <h2 class="text-center text-primary">Notre histoire</h2>
-            <div class="row row-cols-2 align-items-center">
+            <div class="row row-cols align-items-center">
                 <div class="col">
-                    <p class="text-justify">
+                    <p class="text-justify text-secondary">
                         Arcadia est un zoo fondé en 1960 situé en France près de la forêt de Brocéliande en bretagne, forêt mythique et enchantée citée dans plusieurs textes, liés pour la plupart à la légende arthurienne. Ils possèdent tout un panel d’animaux, réparti par habitat (savane, jungle, marais) et font  extrêmement attention à leurs santés.
                     </p>
                 </div>
@@ -21,79 +21,78 @@
 </section>
 
 <section>
-        <article class="bg-black text-white">
-        <div class="container p-4">
-            <h2 class="text-center text-primary">Visite du zoo</h2>
-            <div class="row row-cols-2 align-items-center">
-                <div class="col">
-                    <p class="text-justify">
-                        Venez admirez notre diversité d'espèces animales s'épanouir au sein de leurs habitats naturels
-                    </p>
-                </div>
-     <div class="row row-cols-2 row-cols-lg-3">
-        <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="../images/habitat1.jpg" class="rounded w-100"/>
+    <article class="white text-secondary">
+      <div class="container p-4">
+          <h2 class="text-center text-primary">Visite du zoo</h2>
+        <div class="row row-cols align-items-center">
+       <div class="col">
+            <p class="text-justify text-center">
+                Venez admirez notre diversité d'espèces animales s'épanouir au sein de leurs habitats naturels
+            </p>
+       <div class="row row-cols-2 row-cols-lg-3">
+          <div class="col">
+            <div class="image-card text-primary">
+                <img src="../images/habitat1.jpg" class="rounded w-50"/>
                 <p class="titre-image">La flore Brocéliande</p>
             </div>
-        </div>
-     <div class="row row-cols-2 row-cols-lg-3">
+          </div>
         <div class="col p-3">
-            <div class="image-card text-white">
-                <img src="../images/habitat2.jpg" class="rounded w-100"/>
-                <p class="titre-image">La serre tropical</p>
+            <div class="image-card text-primary">
+                <img src="../images/habitat2.jpg" class="rounded w-75"/>
+                <p class="titre-image text-center">La serre tropical</p>
             </div>
         </div>
-     </div>
-    <div class="text-center pt-4">
-        <a href="/visit" class="btn btn-primary">Accès à la visite</a>
-    </div>
+       </div>
+        <div class="text-center pt-4">
+            <a href="/visit" class="btn btn-primary">Accès à la visite</a>
+        </div>
+    </article>
 </section>
 
 <section>
-        <article class="bg-black text-white">
+    <article class="bg-black text-white">
         <div class="container p-4">
             <h2 class="text-center text-primary">Profitez de nos services</h2>
-            <div class="row row-cols-2 align-items-center">
-     <div class="row row-cols-2 row-cols-lg-3">
+        <div class="row row-cols align-items-center">
+      <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
-            <div class="image-card text-white">
+            <div class="image-card text-primary">
                 <img src="../images/food.jpg" class="rounded w-100"/>
                 <p class="titre-image">Restauration</p>
             </div>
         </div>
-     </div>
-     <div class="row row-cols-2 row-cols-lg-3">
+      </div>
         <div class="col p-3">
-            <div class="image-card text-white">
+            <div class="image-card text-primary">
                 <img src="../images/train.jpg" class="rounded w-100"/>
                 <p class="titre-image">parcours en petit train</p>
             </div>
         </div>
-     </div>
-     <div class="row row-cols-2 row-cols-lg-3">
+      </div>
         <div class="col p-3">
-            <div class="image-card text-white">
+            <div class="image-card text-primary">
                 <img src="../images/guidevisit.jpg" class="rounded w-100"/>
                 <p class="titre-image">visite guidée</p>
             </div>
         </div>
-     </div>
-     <div class="col">
-        <p class="text-justify">
-             Afin de rendre votre visite agréable, et vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
-        </p>
-    </div>
-    <div class="text-center pt-4">
-        <a href="/service" class="btn btn-primary">Accès aux services</a>
-    </div>
+      </div>
+      <div class="col">
+          <p class="text-justify text-center">
+             Afin de rendre votre visite agréable, et vous souhaitez en apprendre plus sur nos animaux et leur habitat.<br>
+             Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
+          </p>
+      </div>
+        <div class="text-center">
+            <a href="/service" class="btn btn-primary">Accès aux services</a>
+        </div>
+    </article>
 </section>
 
 <section>
-    
-    <div class="text-center">
-        <button type="submit" class="btn btn-primary">Envoyer</button>
-    </div>
-</section>
+    <article>
 
-</article>
+        <div class="text-center">
+            <button type="submit" class="btn btn-primary">Envoyer</button>
+        </div>
+    </article>
+</section>
