--- a/pages/authentification/signin.html
+++ b/pages/authentification/signin.html
@@ -3,25 +3,29 @@
         <h1>Connexion</h1>
     </div>
 </div>
+
 <div class="container">
-   <a text-align-center>Si vous êtes Vétérinaire agrée ou salarié du Zoo, veuillez rentrer vos Identifiant et Mot de passe que vous avez reçu par email</a>
-   <form>
-     <div class="mb-3">
-        <label for="textInput" class="form-label">Identififitant</label>
-        <input type=”text” id=”username” name=”username” required>
+   <div class="text-center pt-3">
+      <a text-align-center>Si vous êtes Vétérinaire agrée ou salarié du Zoo, veuillez rentrer vos Identifiant et Mot de passe que vous avez reçu par email</a>
+   </div>
+      <form>
+        <div>
+            <label for="username">Identifiant :</label>
+            <input type="text" id="username" name="username" />
+        </div>     
+        <div>
+             <label for="pass">Mot de passe :</label>
+             <input type="password" id="pass" name="password"/>
+        </div>
+        <div class="text-center pt-3">
+            <button type="submit" class="btn btn-primary">Connexion</button>
+        </div>
+        <div class="text-center pt-3">
+            <button type="button" class="btn btn-secondary">Email gérant_Récupération Mot de passe</button>
+        </div>
+     </form>
+     <div class="text-center pt-3">
+        <a>Vous n'avez pas de compte ou vous rencontrer un problème ?</br>
+                          Demander au gérant l'autotisation d'accès avec la création d'un compte pro</a>
      </div>
-     <div class="mb-3">
-       <label for="PasswordInput" class="form-label">Mot de passe</label>
-       <input type="password" class="form-control" id="PasswordInput">
-     </div>
-     <div class="text-center">
-        <button type="submit" class="btn btn-primary">Connexion</button>
-     </div>
-      <div class="text-center">
-        <button type="button" class="btn btn-secondary">Email gérant_Récupération Mot de passe</button>
-     </div>
-  </form>
-  <div class="text-center pt-3">
-     <a>Vous n'avez pas de compte ou vous rencontrer un problème ?</br>
-                       Demander au gérant l'autotisation d'accès avec la création d'un compte pro</a>
-  </div>
+</form>
