modif pages contact+home

--- a/pages/services.html
+++ b/pages/services.html
@@ -4,7 +4,6 @@
     </div>
 </div>
 
-<div class="container">
 <section>
     <article class="white text-secondary>
         <div class="container p-4">
@@ -19,18 +18,19 @@
        <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
             <div class="image-card text-primary">
-                <img src="../images/food.jpg" class="rounded w-200"/>
+                <img src="../images/food.jpg" class="w-150 rounded"/>
             </div>
         </div>
        </div>
     </article>
-</section>
-    
-<section>
     <article class="bg-black text-white">
         <div class="container p-4">
             <h2 class="text-center text-primary">Un parcours prévu en petit train</h2>
         <div class="row row-cols-2 align-items-center">
+        <div class="col">
+            <div class="image-card text-primary">
+                <img src="../images/train.jpg" class="w-150 rounded"/>
+            </div>
         <div class="col">
             <p class="text-justify">
                 Afin d’améliorer votre expérience, il est proposé la possibilité d’effectué une grande partie du zoo en petit train. Pour cela il est prévu 1 départs le matin et 2 l’après-midi. Les horaires sont les suivants (durée de 1h15),</br>
@@ -38,17 +38,7 @@
                 après-midi : 15 et 16h45
             </p>
         </div>
-
-        <div class="col p-3">
-            <div class="image-card text-primary">
-                <img src="../images/train.jpg" class="rounded w-200"/>
-            </div>
-        </div>
-       </div>
     </article>
-</section>
-
-<section>
     <article class="white text-primary">
         <div class="container p-4">
             <h2 class="text-center text-primary">Suivez nos guides</h2>
@@ -61,7 +51,7 @@
        <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
             <div class="image-card text-primary">
-                <img src="../images/guidevisit.jpg" class="rounded w-200"/>
+                <img src="../images/guidevisit.jpg" class="w-150 rounded"/>
             </div>
         </div>
        </div>
