--- a/pages/authentification/signup.html
+++ b/pages/authentification/signup.html
@@ -1,22 +1,18 @@
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
-        <h1>Inscription</h1>
+        <h1>Création de compte utilisateur</h1>
     </div>
 </div>
 <div class="container">
     <form>
-        <li>
-            <label for="name">Nom&nbsp;:</label>
-            <input type="text" id="name" name="user_name" />
-        </li>
-        <div class="mb-3">
-            <label for="NomInput" class="form-label">Nom</label>
-            <input type="text" class="form-control" id="NomInput" placeholder="Votre nom" name="Nom"> 
-        </div>
-        <div class="mb-3">
-            <label for="PrenomInput" class="form-label">Prénom</label>
-            <input type="text" class="form-control" id="PrenomInput" placeholder="Votre prénom" name="Prenom"> 
-        </div>
+        <div>
+            <label for="username">Fonction :</label>
+            <input type="text" id="username" name="username" />
+        </div>  
+        <div>
+            <label for="username">Identifiant :</label>
+            <input type="text" id="username" name="username" />
+        </div>  
         <div class="mb-3">
           <label for="EmailInput" class="form-label">Email</label>
           <input type="email" class="form-control" id="EmailInput" placeholder="test@mail.fr" name="Email"> 
