--- a/pages/home.html
+++ b/pages/home.html
@@ -29,7 +29,7 @@
             <p class="text-justify text-center">
                 Venez admirez notre diversité d'espèces animales s'épanouir au sein de leurs habitats naturels
             </p>
-       <div class="row row-cols-2 row-cols-lg-3">
+       <div class="row row-cols-2">
           <div class="col">
             <div class="image-card text-primary">
                 <img src="../images/habitat1.jpg" class="rounded w-50"/>
@@ -50,49 +50,63 @@
 </section>
 
 <section>
-    <article class="bg-black text-white">
+    <article class="bg-black text-secondary">
         <div class="container p-4">
             <h2 class="text-center text-primary">Profitez de nos services</h2>
-        <div class="row row-cols align-items-center">
-      <div class="row row-cols-2 row-cols-lg-3">
-        <div class="col p-3">
-            <div class="image-card text-primary">
-                <img src="../images/food.jpg" class="rounded w-100"/>
-                <p class="titre-image">Restauration</p>
+            <div class="row row-cols-2 row-cols-lg-3">
+                <div class="col p-3">
+                  <div class="image-cardservice text-primary">
+                      <img src="../images/food.jpg" class="rounded w-90"/>
+                      <p class="titre-image text-center">Restauration</p>
+                  </div>
+                </div>
+              <div class="col p-3">
+                  <div class="image-cardservice text-primary">
+                      <img src="../images/train.jpg" class="rounded w-90"/>
+                      <p class="titre-image text-center">visite en train</p>
+                  </div>
+              </div>
+              <div class="col p-3">
+                <div class="image-cardservice text-primary">
+                    <img src="../images/guidevisit.jpg" class="rounded w-900"/>
+                    <p class="titre-image text-center">visite guidée</p>
+                </div>
             </div>
-        </div>
-      </div>
-        <div class="col p-3">
-            <div class="image-card text-primary">
-                <img src="../images/train.jpg" class="rounded w-100"/>
-                <p class="titre-image">parcours en petit train</p>
-            </div>
-        </div>
-      </div>
-        <div class="col p-3">
-            <div class="image-card text-primary">
-                <img src="../images/guidevisit.jpg" class="rounded w-100"/>
-                <p class="titre-image">visite guidée</p>
-            </div>
-        </div>
-      </div>
-      <div class="col">
-          <p class="text-justify text-center">
-             Afin de rendre votre visite agréable, et vous souhaitez en apprendre plus sur nos animaux et leur habitat.<br>
-             Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
+      <div class="container p-2">
+      <div class="row row-cols align-items-center">
+      <div class="col p-3">
+          <p class="text-justify">
+             Afin de rendre votre visite agréable, et vous souhaitez en apprendre plus sur nos animaux et leur habitat. Vous aurez la possibilité de participer à la visite du site à l'aide d'un guide ainsi de réaliser un parcours de la visite en petit train. Vous pourrez aussi profiter de nos nombreux stands de restauration
           </p>
       </div>
         <div class="text-center">
-            <a href="/service" class="btn btn-primary">Accès aux services</a>
+            <a href="/services" class="btn btn-primary">Accès aux services</a>
         </div>
     </article>
 </section>
 
 <section>
     <article>
-
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary">Envoyer</button>
+        <div class="container p-4">
+          <h2 class="text-center text-primary">Vos avis compte</h2>
+            <div class="row row-cols align-items-center">
+                <div class="col">
+                    <p class="text-justify text-secondary">
+                        Vous avez aimer votre visite au sein d'Arcadia ou vous aviez une envie particulière. Laisser nous des commentaires sur l'expérience que vous avez vécu
+                    </p>
+                </div>
+            </div>
+        </div>
+            <li>
+               <label for="name">Pseudo :&nbsp;</label>   
+               <input type="text" id="name" name="user_name" />
+            </li>
+            <li>
+               <label for="msg">Message :&nbsp;</label>
+               <textarea id="msg" name="user_message" rows="10" cols="135"></textarea>
+            </li>
+        <div class="text-center pt-3">
+            <button type="submit" class="btn btn-primary">donner votre avis</button>
         </div>
     </article>
 </section>
