--- a/pages/authentification/signin.html
+++ b/pages/authentification/signin.html
@@ -5,7 +5,7 @@
 </div>
 
 <div class="container">
-   <div class="text-center pt-3">
+   <div class="text-center text-primary pt-3">
       <a text-align-center>Si vous êtes Vétérinaire agrée ou salarié du Zoo, veuillez rentrer vos Identifiant et Mot de passe que vous avez reçu par email</a>
    </div>
       <form>
@@ -24,7 +24,7 @@
             <button type="button" class="btn btn-secondary">Email gérant_Récupération Mot de passe</button>
         </div>
      </form>
-     <div class="text-center pt-3">
+     <div class="text-center text-primary pt-3">
         <a>Vous n'avez pas de compte ou vous rencontrer un problème ?</br>
                           Demander au gérant l'autotisation d'accès avec la création d'un compte pro</a>
      </div>
