--- a/pages/contact.html
+++ b/pages/contact.html
@@ -18,7 +18,7 @@
       </li>
       <li>
          <label for="msg">Message :&nbsp;</label>
-         <textarea id="msg" name="user_message"></textarea>
+         <textarea id="msg" name="user_message" rows="10" cols="135"></textarea>
       </li>
     </ul>
     <div class="text-center pt-4">
