--- a/pages/services.html
+++ b/pages/services.html
@@ -5,35 +5,39 @@
 </div>
 
 <section>
-    <article class="white text-secondary>
+    <article class="white text-primary">
         <div class="container p-4">
             <h2 class="text-center text-primary">Profitez sur places de nos différents stands de restauration</h2>
         <div class="row row-cols-2 align-items-center">
         <div class="col">
-            <p class="text-justify">
-                Tout au long de votre visite du zoo, il a été mis en places diférents type de collations à votre service.
+            <p class="text-justify text-primary">
+                Tout au long de votre visite du zoo, il a été mis en places type de collations à votre service.</br>
                 Ainsi qu’un restaurant au saveur de notre régions avec 2 services prévu le midi
             </p>
         </div>
        <div class="row row-cols-2 row-cols-lg-3">
-        <div class="col p-3">
+        <div class="col p-2">
             <div class="image-card text-primary">
-                <img src="../images/food.jpg" class="w-150 rounded"/>
+                <img src="../images/guidevisit.jpg" class="w-100 rounded"/>
             </div>
         </div>
        </div>
     </article>
-    <article class="bg-black text-white">
+    <article class="bg-dark text-primary>
         <div class="container p-4">
             <h2 class="text-center text-primary">Un parcours prévu en petit train</h2>
         <div class="row row-cols-2 align-items-center">
+            <div class="row row-cols-2 row-cols-lg-3">
+                <div class="col p-5">
+                    <div class="image-card text-primary">
+                        <img src="../images/train.jpg" class="w-100 rounded"/>
+                    </div>
+                </div>
+               </div>
         <div class="col">
-            <div class="image-card text-primary">
-                <img src="../images/train.jpg" class="w-150 rounded"/>
-            </div>
-        <div class="col">
-            <p class="text-justify">
-                Afin d’améliorer votre expérience, il est proposé la possibilité d’effectué une grande partie du zoo en petit train. Pour cela il est prévu 1 départs le matin et 2 l’après-midi. Les horaires sont les suivants (durée de 1h15),</br>
+            <p class="text-justify text-secondary">
+                Afin d’améliorer votre expérience, il est proposé la possibilité d’effectué une grande partie du zoo en petit train.</br>
+                Pour cela il est prévu 1 départs le matin et 2 l’après-midi. Les horaires sont les suivants (durée deu trajet 1h15),</br>
                 matin : 10h</br>
                 après-midi : 15 et 16h45
             </p>
@@ -49,9 +53,9 @@
             </p>
         </div>
        <div class="row row-cols-2 row-cols-lg-3">
-        <div class="col p-3">
+        <div class="col p-2">
             <div class="image-card text-primary">
-                <img src="../images/guidevisit.jpg" class="w-150 rounded"/>
+                <img src="../images/guidevisit.jpg" class="w-100 rounded"/>
             </div>
         </div>
        </div>
