--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>
     </footer>
 
-    <script type="module" src="Router/Router.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script type="module" src="/Router/Router.js"></script>
+    <script src="/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
