--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <a class="nav-link" href="/visit">Habitats & animaux</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/services">Services</a>
+          <a class="nav-link" href="/services" onclick="routeEvent(event)">Services</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/contact">Contact</a>
