correction home.html

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
           <a class="nav-link" href="/">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/visit">Habitats & animaux</a>
+          <a class="nav-link" href="/Visit">Habitats & animaux</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/services" onclick="routeEvent(event)">Services</a>
+          <a class="nav-link" href="/Services">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/contact">Contact</a>
+          <a class="nav-link" href="/Contact">Contact</a>
        </li>
         <li class="nav-item">
-          <a class="nav-link" href="/signin">Connexion Employé / Vétérinaire</a>
+          <a class="nav-link" href="/Signin">Connexion Employé / Vétérinaire</a>
         </li>
       </ul>
     </div>
