--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <a class="nav-link" href="/">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/visit">Habitats & animaux</a>
+          <a class="nav-link" href="/pages/visit">Habitats & animaux</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/services">Services</a>
