--- a/pages/authentification/signin.html
+++ b/pages/authentification/signin.html
@@ -14,11 +14,14 @@
             <input type="text" id="username" name="username" />
         </div>     
         <div>
-             <label for="pass">Mot de passe :</label>
-             <input type="password" id="pass" name="password"/>
+             <label for="passwordInput">Mot de passe :</label>
+             <input type="password" id="passwordInput" name="passwordInput"/>
+        </div>
+        <div class="invalid-feedback">
+            L'identifiant et ou le Mot de passe sont incorrecte
         </div>
         <div class="text-center pt-3">
-            <button type="submit" class="btn btn-primary">Connexion</button>
+            <button type="button" class="btn btn-primary" id="btnSignin">Connexion</button>
         </div>
         <div class="text-center pt-3">
             <button type="button" class="btn btn-secondary">Email gérant_Récupération Mot de passe</button>
