Ajout de commentaire

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+<!-- en tête haut de page du site avec la barre de menu -->
 <header>
   <nav class="navbar navbar-expand-lg bg-dark" data-bs-theme="dark">
    <div class="container-fluid">
@@ -45,9 +46,10 @@
 </header>
 
     <main id="main-page">
-        <!--Le contenu de la page sera injectée ici-->
+<!--Le contenu de la page sera injectée ici-->
     </main>
 
+<!-- bas de page du site -->
     <footer class="bg-dark text-white text-center footer">
         <div class="row">
             <div class="col-6 col-lg-4">
