--- a/pages/authentification/signup.html
+++ b/pages/authentification/signup.html
@@ -1,8 +1,11 @@
+<!-- le "BigTitle" de la page-->
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
         <h1>Création de compte utilisateur</h1>
     </div>
 </div>
+
+<!-- le contenu pour se connecter aux site pour les personnes autorisés-->
 <div class="container">
     <form>
         <div>
