--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,9 +1,11 @@
+<!-- le "BigTitle" de la page-->
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
         <h1>Contact</h1>
     </div>
 </div>
 
+<!-- ici le formulaire de contact-->
     <div class="container">
         <h2 class="text-center text-primary">Vous souhaitez nous contacter</h2>      
   <form action="/contact" method="post">
@@ -26,6 +28,7 @@
     </div>
   </form>
 
+  <!-- les infos pour contacter le zoo-->
   <div class="container text-center">
       <h2 class="text-center text-primary pt-3">Nos informations</h2>
     <p>Nos horaires</p>
