--- a/pages/home.html
+++ b/pages/home.html
@@ -1,3 +1,4 @@
+<!-- le "BigTitle" de la page-->
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
         <p>Nous vous souhaitons la bienvenue dans l’univers du </p>
@@ -5,6 +6,7 @@
     </div>
 </div>
 
+<!-- contenu de la page home-->
 <section>
         <article>
         <div class="container p-4">
