--- a/pages/services.html
+++ b/pages/services.html
@@ -1,9 +1,11 @@
+<!-- le "BigTitle" de la page-->
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
         <h1>Services proposés</h1>
     </div>
 </div>
 
+<!-- contenu de la page services-->
 <section>
     <article class="white text-primary">
         <div class="container p-4">
