--- a/pages/visit.html
+++ b/pages/visit.html
@@ -1,9 +1,11 @@
+<!-- le "BigTitle" de la page-->
 <div class="hero-scene text-center text-white">
     <div class="hero-scene-content">
         <h1>Habitats & animaux</h1>
     </div>
 </div>
 
+<!-- contenu de la page sur les habitats et animaux-->
 <div class="container">
 
 </div>
