--- a/404.html
+++ b/404.html
@@ -3,5 +3,5 @@
     <p>Attention il semble que cette page est introuvables...</br>
        Veuillez vérifier si vous avez bien rentré la bonne adresse du site
     </p>
-    <p><a href="Retour à l'acceuil"></a></p>
+    <!--<p><a href="Retour à l'acceuil"></a></p>-->
 </div>
